[test] optimize cmdline test options